--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "phpoffice/phpexcel": "^1.8",
         "webpatser/laravel-uuid": "^3.0"
     },
     "require-dev": {
