--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
-        "phpoffice/phpexcel": "^1.8",
+        "mohamednizar/phpexcel": "^1.8",
         "webpatser/laravel-uuid": "^3.0",
         "yajra/laravel-datatables-oracle": "^9.4"
     },
@@ -54,6 +54,12 @@
             "Tests\\": "tests/"
         }
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/mohamednizar/PHPExcel.git"
+        }
+    ],
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
