--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "mohamednizar/phpexcel": "^1.8",
+        "mohamednizar/PhpSpreadsheet" : "1.9.1",
         "webpatser/laravel-uuid": "^3.0",
         "yajra/laravel-datatables-oracle": "^9.4"
     },
@@ -60,6 +61,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/mohamednizar/PHPExcel.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/mohamednizar/PhpSpreadsheet.git"
         }
     ],
     "minimum-stability": "dev",
