--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "aws/aws-sdk-php": "^3.112",
         "fideloper/proxy": "^4.0",
+        "gossi/php-code-formatter": "dev-master",
         "guzzlehttp/guzzle": "^6.4",
         "laracademy/model-generator": "^1.2",
         "laravel/framework": "5.8.*",
