--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^6.4",
         "laracademy/model-generator": "^1.2",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.5",
         "laravel/tinker": "^1.0",
         "mohamednizar/excel": "^3.1",
         "webpatser/laravel-uuid": "^3.0",
