--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,11 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "github-oauth": {
+            "github.com": "c03ba3acc815672e726548adef54ce7112edf5d0"
+        }
+    }
     },
     "extra": {
         "laravel": {
