--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,7 @@
             "url": "https://github.com/mohamednizar/PhpSpreadsheet.git"
         },
         {
-            "type": "git",
+            "type": "vcs",
             "url": "https://github.com/mohamednizar/Laravel-Excel.git"
         }
     ],
