--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
         ],
         "psr-4": {
             "App\\": "app/",
-            "App/Models\\": "app/Models"
+            "App/Models\\": "app/Models",
+            "Maatwebsite\\Excel": "vendor/mohamednizar/excel"
         },
         "classmap": [
             "database/seeds",
