--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,10 @@
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.5",
         "laravel/tinker": "^1.0",
+        "lsflk/unique-uid": "v1.0.0",
         "mohamednizar/excel": "^3.1",
-        "mohamednizar/moe-uuid": "^1.2@beta",
         "webpatser/laravel-uuid": "^3.0",
+        "wyndow/fuzzywuzzy": "^0.6.0",
         "yajra/laravel-datatables-oracle": "^9.4"
     },
     "require-dev": {
@@ -89,6 +90,8 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     }
 }
