--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.3.14",
         "aws/aws-sdk-php": "^3.112",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
@@ -22,8 +22,7 @@
         "mohamednizar/excel": "^3.1",
         "webpatser/laravel-uuid": "^3.0",
         "wyndow/fuzzywuzzy": "^0.6.0",
-        "yajra/laravel-datatables-oracle": "^9.4",
-        "staudenmeir/laravel-migration-views": "v1.3"
+        "yajra/laravel-datatables-oracle": "^9.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
